src/test/deca/context/valid/return/return_float_expr_ok.deca
// Description :
// Return d’une expression float
//
// Resultats :
// ok

class A{ float f() { return 2.5 + 3.1; } }
