src/test/deca/context/invalid/inheritance/inheritance_chain_override_mismatch.deca
// Description :
//    Chaîne d'héritage avec redéfinition incompatible.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f() {
        return 1;
    }
}

class B extends A {
    int f() {
        return 2;
    }
}

class C extends B {
    float f() {
        return 3.0;
    }
}

{
}

